# comput

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  compile.sh  crun.sh  main.c  main.cpp  run.sh  visual-studio.bat  xcode.sh
src/: bbox.cpp  bbox.h  collision_matrix.h  collision_system_base.h  engine.cpp  engine.h  globals.h  main.c  main.cpp  object.cpp  object.h  object_properties.cpp  object_properties.h  window_handler.cpp  window_handler.h
src/util/: color.h  force.h  mass.h  position.h  system.h  unit.h  util.cpp  util.h  velocity.h
src/util/collision_system/: #brute_force.h#  #separating_axis.h#  .#separating_axis.h  axis_aligned.cpp  axis_aligned.h  base.h  brute_force.cpp  brute_force.h  separating_axis.cpp  separating_axis.h
test/: verify_sdl.c  verify_sdl.cpp
